--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,83 @@
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+
 .App {
   text-align: center;
+  background-color: rgb(34, 64, 119);
+  width: 100%;
+  height: 100vh;
+  font-family: 'Anton', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
+.App h1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 25px;
+  margin: 0;
+  /* height: 25%; */
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.lengths {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-direction: row;
+  height: 100px;
+  width: 100%;
+}
+
+#break-Length, #session-Length {
+  display: inline-block;
+  width: 300px;
+}
+
+#break-Length div, #session-Length div, #break-Length button, #session-Length button {
+  display: inline;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+#break-Length div, #session-Length div {
+  padding-bottom: 10px;
+}
+
+.minutes {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.4rem;
+  height: 25%;
+}
+
+.buttons {
+  height: 25%;
+}
+
+.btn-watch {
+  margin: 20px 20px 0 20px;
+  width: 55px;
+  height: 25px;
+  background-color: rgb(29, 30, 30);
   color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.btn-watch:hover {
+  background-color: rgb(47, 48, 48);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn-small {
+  background-color:  rgb(34, 64, 119);
+  color: white;
+  border-radius: 10px;
+  cursor: pointer;
+  border: none;
+}
+
+.btn-small i {
+  height: 30px;
 }
